Initial implementation of method-ref support